tests/paczka1/fuzzy1/16862450.err
Error in line 2: ypPPE A739 90,8
Error in line 3: A968 S474 58,2
Error in line 6: A968 A739 66,2
Error in line 28: GxQT2X A739 6,1
Error in line 33: W4VqZnHa S474 59,1
